--- a/css/styles.css
+++ b/css/styles.css
@@ -50,11 +50,19 @@ img {
 /*дефолтні класи*/
 .container {
   min-width: 320px;
-  max-width: 768px;
+  max-width: 428px;
+  padding: 0 16px;
   margin: 0 auto;
 }
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
 @media screen and (min-width: 1158px) {
   .container {
+    max-width: 1158px;
     padding: 0 15px;
   }
 }
@@ -68,7 +76,12 @@ img {
 }
 /*відступи в секціях*/
 .section {
-  padding: 120px 0;
+  padding: 96px 0;
+}
+@media screen and (min-width: 1158px) {
+  .section {
+    padding: 120px 0;
+  }
 }
 /*прихований елемент*/
 .visually-hidden {
@@ -192,10 +205,14 @@ img {
   background-position: center;
   background-size: cover;
 }
-/* @media and (min-width: 768px) {
-} */
+@media screen and (min-width: 768px) {
+  .hero {
+    min-width: 768px;
+  }
+}
 @media screen and (min-width: 1158px) {
   .hero {
+    min-width: 1158px;
     padding: 188px 0;
   }
 }
@@ -207,7 +224,6 @@ img {
   font-weight: 700;
   line-height: 1.11;
   letter-spacing: 0.02em;
-  /* width: 320px; */
   margin: 0 auto;
   padding-bottom: 72px;
 }
@@ -251,38 +267,85 @@ img {
 }
 
 /*Секція 2 текст*/
-
-/* .container-quality {
-  display: flex;
-  gap: 24px;
+.container-quality {
+}
+@media screen and (min-width: 768px) {
+  .container-quality {
+    display: flex;
+    row-gap: 72px;
+    column-gap: 24px;
+    flex-wrap: wrap;
+  }
 }
 .quality-list {
-  width: calc((100% - 72px) / 4);
+  padding-bottom: 72px;
 }
+.quality-list:last-child {
+  padding-bottom: 0;
+}
+@media screen and (min-width: 768px) {
+  .quality-list {
+    width: calc((100% - 24px) / 2);
+    padding-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .quality-list {
+    width: calc((100% - 72px) / 4);
+  }
+}
+
 .quality-icons-fon {
-  background-color: var(--color-team);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 4px;
-  height: 112px;
-  margin-bottom: 8px;
+  display: none;
+}
+@media only screen and (min-width: 1158px) {
+  .quality-icons-fon {
+    background-color: var(--color-team);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    height: 112px;
+    margin-bottom: 8px;
+  }
 }
 
 .quality-name {
   color: var(--color-base);
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
+  text-align: center;
+}
+@media only screen and (min-width: 768px) {
+  .quality-name {
+    text-align: left;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .quality-name {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+  }
 }
 
 .quality-text {
   color: var(--color-text);
   line-height: 1.5;
   letter-spacing: 0.02em;
+
+  font-weight: 500;
 }
+@media only screen and (min-width: 1158px) {
+  .quality-text {
+    font-weight: 400;
+  }
+}
+/*
 .social-contact {
   display: flex;
   gap: 24px;
@@ -315,42 +378,69 @@ img {
 } */
 
 /*Секція 3  Картинки*/
-/* .images {
-  padding-bottom: 120px;
+.images {
+  display: none;
 }
 .work-name {
   color: var(--color-base);
+  text-align: center;
   font-size: 36px;
   line-height: 1.11;
-  text-align: center;
+  font-weight: 700;
   letter-spacing: 0.02em;
-  text-transform: capitalize;
   margin-bottom: 72px;
+  /* Header 2 */
 }
-.container-images {
-  display: flex;
-  gap: 24px;
+@media only screen and (min-width: 1158px) {
+  .images {
+    display: block;
+    padding-bottom: 120px;
+  }
+
+  .container-images {
+    display: flex;
+    gap: 24px;
+  }
+  .images-list {
+    width: calc((100% - 48px) / 3);
+  }
 }
-.images-list {
-  width: calc((100% - 48px) / 3);
-} */
 
 /*Секція 4 команда (класи work-name   quality-name   quality-text використовуються з попереднього )*/
-/* .team {
+.team {
   background-color: var(--color-team);
 }
 .container-team {
-  display: flex;
-  gap: 24px;
 }
+@media only screen and (min-width: 768px) {
+  .container-team {
+    display: flex;
+    row-gap: 64px;
+    column-gap: 24px;
+    flex-wrap: wrap;
+  }
+}
+
 .team-section {
+  margin-bottom: 72px;
   background-color: var(--color-white);
-  width: calc((100% - 72px) / 4);
+
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
+@media only screen and (min-width: 768px) {
+  .team-section {
+    width: calc((100% - 24px) / 2);
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .team-section {
+    width: calc((100% - 72px) / 4);
+  }
+}
+
 .team-techskill {
   padding: 32px 0;
 }
@@ -360,7 +450,7 @@ img {
 }
 .people-skill {
   text-align: center;
-} */
+}
 /* Секція 5 Сustomers*/
 /* .container-quality-icons {
   display: flex;
@@ -792,4 +882,5 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-right: auto;
   margin-left: auto;
-} */
+} 
+*/
