--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ img {
   overflow: hidden;
 }
 /*header*/
-/* .class-for-header {
+.class-for-header {
   border-bottom: 1px solid var(--color-cornflower);
   background-color: var(--color-white);
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
@@ -115,21 +115,39 @@ img {
   color: var(--color-blue);
   text-transform: uppercase;
   text-decoration: none;
-  font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
-  margin-right: 76px;
+  margin-right: auto;
   align-items: center;
+}
+@media only screen and (min-width: 768px) {
+  .web {
+    margin-right: 120px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .web {
+    margin-right: 76px;
+  }
 }
 .studio-header {
   color: var(--color-base);
   font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
 }
 .menu {
   display: flex;
   gap: 40px;
 }
+@media only screen and (max-width: 767.98px) {
+  .menu {
+    display: none;
+  }
+}
+
 .navigation {
   position: relative;
   color: var(--color-base);
@@ -170,23 +188,53 @@ img {
   font-style: normal;
   margin-left: auto;
   display: inline-block;
-  padding: 24px 0;
+  padding: 16px 0;
 }
-.container-adress {
-  display: flex;
-  gap: 40px;
+@media only screen and (min-width: 1158px) {
+  .addres {
+    padding: 24px 0;
+  }
 }
+
+@media only screen and (min-width: 1158px) {
+  .container-adress {
+    display: flex;
+    gap: 40px;
+  }
+}
+.menu-navigation {
+  padding-bottom: 12px;
+}
+@media only screen and (min-width: 1158px) {
+  .menu-navigation {
+    padding-bottom: 0px;
+  }
+}
+
 .contacts {
   color: var(--color-text);
-  line-height: 1.5;
+  font-size: 12px;
+  line-height: 1.17;
   list-style-type: none;
   text-decoration: none;
   font-style: normal;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.04em;
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-} */
+}
+@media only screen and (max-width: 767.98px) {
+  .contacts {
+    display: none;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .contacts {
+    line-height: 1.5;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+  }
+}
 
 /*main*/
 /*Секція 1 "Hero image"*/
@@ -611,6 +659,11 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
 }
+@media only screen and (min-width: 768px) {
+  .social-name-ftr {
+    text-align: left;
+  }
+}
 
 /* .container-button {
   display: flex;
@@ -623,7 +676,7 @@ img {
 }
 @media only screen and (min-width: 768px) {
   .social-ftr {
-    margin: 0;
+    margin: 0 0 0 24px;
   }
 }
 @media only screen and (min-width: 1158px) {
@@ -631,6 +684,7 @@ img {
     margin: 0 auto 0 120px;
   }
 }
+
 .social-contact-fone-ftr {
   width: 40px;
   height: 40px;
@@ -657,7 +711,17 @@ img {
 }
 /*Форма футера*/
 .foter-form {
-  /* margin-left: auto; */
+  margin: 0 auto;
+}
+@media only screen and (min-width: 768px) {
+  .foter-form {
+    margin: 0;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .foter-form {
+    margin-left: auto;
+  }
 }
 .foter-form-text {
   margin-bottom: 16px;
@@ -666,18 +730,29 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-white);
+  text-align: center;
+}
+@media only screen and (min-width: 768px) {
+  .foter-form-text {
+    text-align: left;
+  }
 }
 .foter-form-block {
-  display: flex;
-  gap: 24px;
-  flex-direction: column;
+  /* max-width: 768px; */
+  min-width: 320px;
+  /* width: 100%; */
+}
+@media only screen and (min-width: 768px) {
+  .foter-form-block {
+    display: flex;
+    gap: 24px;
+  }
 }
 /* .foter-form-label {
   max-width: 767px;
-  
 } */
 .foter-form-email {
-  width: 264px;
+  width: 100%;
   height: 40px;
   border: 1px solid var(--color-white);
   background-color: transparent;
@@ -689,16 +764,24 @@ img {
   border-radius: 4px;
   color: var(--color-white);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 16px;
+}
+@media only screen and (min-width: 768px) {
+  .foter-form-email {
+    width: 264px;
+  }
 }
 .foter-form-email::placeholder {
   color: var(--color-white);
 }
 .foter-form-email:hover,
-.foter-form-email:focus {
+.foter-form-email:focus,
+.foter-form-email:active {
   border-color: var(--color-blue);
 }
 
 .foter-form-but {
+  margin: 0 auto;
   min-width: 165px;
   height: 40px;
   display: flex;
@@ -998,3 +1081,68 @@ img {
   margin-left: auto;
 } 
 */
+/* мобільне меню */
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+}
+
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: #3f51b5;
+  z-index: 999;
+
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: #fff;
+}
+
+.mobile-menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.mobile-menu .link {
+  display: block;
+  padding: 10px;
+  color: #fff;
+  text-decoration: none;
+}
