--- a/css/styles.css
+++ b/css/styles.css
@@ -36,10 +36,11 @@ ul {
   margin-bottom: 0;
   padding-left: 0;
 }
-/*Робимо зображення блочними елементами*/
+/*Робимо зображення блочними елементами гумовими*/
 img {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 /*базові стилі*/
 .base {
@@ -142,7 +143,7 @@ img {
   display: flex;
   gap: 40px;
 }
-@media only screen and (max-width: 767.98px) {
+@media screen and (max-width: 767.98px) {
   .menu {
     display: none;
   }
@@ -162,11 +163,17 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.navigation:hover,
-.navigation:focus,
-.contacts:hover,
-.contacts:focus {
+.navigation:active,
+.contacts:active {
   color: var(--color-ocean);
+}
+@media (hover: hover) {
+  .navigation:hover,
+  .navigation:focus,
+  .contacts:hover,
+  .contacts:focus {
+    color: var(--color-ocean);
+  }
 }
 
 .navigation::after {
@@ -240,30 +247,77 @@ img {
 /*Секція 1 "Hero image"*/
 
 .hero {
-  min-width: 428px;
+  min-width: 320px;
   background-color: var(--color-base);
   padding: 112px 0;
-  background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url(../images/people-office1.jpg);
+
   background-repeat: no-repeat;
   margin: 0 auto;
   background-position: center;
   background-size: cover;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero/Dark-bg_mob@1x.jpg);
 }
+@media screen and (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero/Dark-bg_mob@2x.jpg);
+  }
+}
+
 @media screen and (min-width: 768px) {
   .hero {
     min-width: 768px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero/Dark-bg_tab@1x.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero/Dark-bg_tab@2x.jpg);
   }
 }
 @media screen and (min-width: 1158px) {
   .hero {
     min-width: 1158px;
+    max-width: 1440px; /*обмеження фонового зображення від Коробки С*/
     padding: 188px 0;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero/people-office1_desk@1x.jpg);
   }
 }
+@media screen and (min-width: 1158px) and (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero/people-office1_desk@2x.jpg);
+  }
+}
+
 .hero-name {
   max-width: 320px;
   color: var(--color-white);
@@ -309,9 +363,14 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.but:hover,
-.but:focus {
+.but:active {
   background-color: var(--color-ocean);
+}
+@media (hover: hover) {
+  .but:hover,
+  .but:focus {
+    background-color: var(--color-ocean);
+  }
 }
 
 /*Секція 2 текст*/
@@ -513,11 +572,15 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-contact-link:hover,
-.social-contact-link:focus {
+.social-contact-link:active {
   background-color: var(--color-ocean);
 }
-
+@media (hover: hover) {
+  .social-contact-link:hover,
+  .social-contact-link:focus {
+    background-color: var(--color-ocean);
+  }
+}
 .social-contact-icon {
   fill: var(--color-team);
 }
@@ -526,7 +589,6 @@ img {
   display: flex;
   row-gap: 72px;
   column-gap: 16px;
-  /* gap: 24px; */
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -665,12 +727,6 @@ img {
   }
 }
 
-/* .container-button {
-  display: flex;
-  justify-content: center;
-  gap: 24px;
-  margin-bottom: 72px;
-} */
 .social-ftr {
   margin: 0 auto 72px auto;
 }
@@ -711,11 +767,13 @@ img {
 }
 /*Форма футера*/
 .foter-form {
-  margin: 0 auto;
+  /* margin: 0 auto; */
+  width: 100%;
 }
 @media only screen and (min-width: 768px) {
   .foter-form {
     margin: 0;
+    width: 453px;
   }
 }
 @media only screen and (min-width: 1158px) {
@@ -738,9 +796,7 @@ img {
   }
 }
 .foter-form-block {
-  /* max-width: 768px; */
-  min-width: 320px;
-  /* width: 100%; */
+  /* min-width: 320px; */
 }
 @media only screen and (min-width: 768px) {
   .foter-form-block {
@@ -748,11 +804,10 @@ img {
     gap: 24px;
   }
 }
-/* .foter-form-label {
-  max-width: 767px;
-} */
+
 .foter-form-email {
   width: 100%;
+  max-width: 767.98px;
   height: 40px;
   border: 1px solid var(--color-white);
   background-color: transparent;
@@ -774,12 +829,16 @@ img {
 .foter-form-email::placeholder {
   color: var(--color-white);
 }
-.foter-form-email:hover,
-.foter-form-email:focus,
 .foter-form-email:active {
   border-color: var(--color-blue);
 }
 
+@media (hover: hover) {
+  .foter-form-email:hover,
+  .foter-form-email:focus {
+    border-color: var(--color-blue);
+  }
+}
 .foter-form-but {
   margin: 0 auto;
   min-width: 165px;
@@ -809,7 +868,12 @@ img {
 }
 
 /*portfolio-main*/
-
+/* .container-button {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-bottom: 72px;
+} */
 /*.section-porfolio {
   padding-top: 96px;
   padding-bottom: 120px;
@@ -892,7 +956,7 @@ img {
 }*/
 /*модальне вікно*/
 
-/* .backdrop {
+.backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -923,6 +987,11 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 767.98px) {
+  .modal {
+    width: 392px;
+  }
 }
 .modal-but {
   position: absolute;
@@ -957,7 +1026,7 @@ img {
   fill: var(--color-white);
 }
 /*стилізація модального вікна*/
-/*.modal-header {
+.modal-header {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -969,7 +1038,6 @@ img {
 }
 .modal-input-container {
   margin-bottom: 8px;
-  
 }
 .modal-input-text {
   font-size: 12px;
@@ -1079,17 +1147,15 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-right: auto;
   margin-left: auto;
-} 
-*/
+}
+
 /* мобільне меню */
 .menu-toggle {
-  min-height: 40px;
-  min-width: 40px;
+  min-height: 32px;
+  min-width: 22px;
   display: flex;
   align-items: center;
   justify-content: center;
-
-  margin: 0;
   padding: 0;
   background-color: transparent;
   cursor: pointer;
@@ -1098,7 +1164,7 @@ img {
   outline: none;
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .menu-toggle {
     display: none;
   }
@@ -1108,21 +1174,49 @@ img {
 .menu-toggle:focus {
   background-color: rgba(0, 0, 0, 0.1);
 }
-
+.mobile-menu-icon {
+  stroke: var(--color-base);
+}
+.menu-but-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-cornflower);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-close-icon {
+  fill: var(--color-base);
+}
 .menu-container {
+  display: flex;
+  flex-direction: column;
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 32px;
-  background-color: #3f51b5;
+  padding: 40px;
+  padding-top: 80px;
+  background-color: var(--color-white);
   z-index: 999;
 
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
 }
 
+.mobile-menu-item:not(:last-child) {
+  margin-bottom: 40px;
+}
 .menu-container.is-open {
   transform: translateX(0);
 }
@@ -1135,14 +1229,94 @@ img {
 }
 
 .mobile-menu {
-  padding: 0;
-  margin: 0;
-  list-style: none;
 }
 
-.mobile-menu .link {
+.link-mob-menu {
   display: block;
-  padding: 10px;
-  color: #fff;
-  text-decoration: none;
+  color: var(--color-base);
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+}
+.link-mob-menu:active {
+  color: var(--color-ocean);
+}
+@media (hover: hover) {
+  .link-mob-menu:hover,
+  .link-mob-menu:focus {
+    color: var(--color-ocean);
+  }
+}
+.social-contact-mob {
+  display: flex;
+  justify-content: space-between;
+}
+
+.social-contact-fone-mob {
+  width: 40px;
+  height: 40px;
+}
+.social-contact-link-mob {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-blue);
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-contact-link-mob:active {
+  background-color: var(--color-green);
+}
+@media (hover: hover) {
+  .social-contact-link-mob:hover,
+  .social-contact-link-mob:focus {
+    background-color: var(--color-green);
+  }
+}
+.mob-menu-container-adress {
+  margin-top: auto;
+  margin-bottom: 48px;
+}
+.mob-menu-navigation:not(:last-child) {
+  padding-bottom: 40px;
+}
+.mob-contacts-tel {
+  color: var(--color-text);
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  max-width: 353px;
+  width: 100%;
+}
+.mob-contacts-tel:active {
+  color: var(--color-blue);
+}
+@media (hover: hover) {
+  .mob-contacts-tel:hover,
+  .mob-contacts-tel:focus {
+    color: var(--color-blue);
+  }
+}
+.mob-contacts-email {
+  color: var(--color-text);
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+.mob-contacts-email:active {
+  color: var(--color-blue);
+}
+@media (hover: hover) {
+  .mob-contacts-email:hover,
+  .mob-contacts-email:focus {
+    color: var(--color-blue);
+  }
 }
