--- a/css/styles.css
+++ b/css/styles.css
@@ -868,16 +868,17 @@ img {
 }
 
 /*portfolio-main*/
-/* .container-button {
+.container-button {
   display: flex;
   justify-content: center;
   gap: 24px;
   margin-bottom: 72px;
-} */
-/*.section-porfolio {
+}
+.section-porfolio {
   padding-top: 96px;
   padding-bottom: 120px;
-} .button-portfolio {
+}
+.button-portfolio {
   background-color: var(--color-team);
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -913,18 +914,16 @@ img {
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-} 
-
-
+}
 
 .portfolio-images-name {
   padding: 32px 16px;
   border: 1px solid var(--color-cornflower);
   border-top: none;
-}*/
+}
 /*Випливаюче вікно ОВЕРЛЕЙ картинок для портфоліо*/
 
-/* .portfolio-images-link {
+.portfolio-images-link {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -952,8 +951,8 @@ img {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
-  height: 100%; 
-}*/
+  height: 100%;
+}
 /*модальне вікно*/
 
 .backdrop {
